[gd_scene load_steps=5 format=2]

[ext_resource path="res://addons/hyh.cutscene_graph/icon_graph_edit.svg" type="Texture" id=1]
[ext_resource path="res://addons/hyh.cutscene_graph/icon_remove.svg" type="Texture" id=2]
[ext_resource path="res://addons/hyh.cutscene_graph/icon_folder.svg" type="Texture" id=3]
[ext_resource path="res://addons/hyh.cutscene_graph/scripts/EditorSubGraphNode.gd" type="Script" id=4]

[node name="EditorSubGraphNode" type="GraphNode"]
margin_right = 536.0
margin_bottom = 74.0
title = "Sub-graph"
show_close = true
slot/0/left_enabled = true
slot/0/left_type = 0
slot/0/left_color = Color( 0.94902, 0.27451, 0.478431, 1 )
slot/0/right_enabled = true
slot/0/right_type = 0
slot/0/right_color = Color( 0.811765, 0.956863, 0.298039, 1 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 16.0
margin_top = 24.0
margin_right = 520.0
margin_bottom = 68.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 494.0
margin_bottom = 34.0
size_flags_horizontal = 3
custom_constants/separation = 10

[node name="SubGraphPath" type="LineEdit" parent="MarginContainer/HBoxContainer"]
margin_right = 370.0
margin_bottom = 24.0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
editable = false

[node name="OpenButton" type="ToolButton" parent="MarginContainer/HBoxContainer"]
margin_left = 380.0
margin_right = 408.0
margin_bottom = 24.0
icon = ExtResource( 3 )

[node name="EditButton" type="ToolButton" parent="MarginContainer/HBoxContainer"]
margin_left = 418.0
margin_right = 446.0
margin_bottom = 24.0
icon = ExtResource( 1 )

[node name="RemoveButton" type="ToolButton" parent="MarginContainer/HBoxContainer"]
margin_left = 456.0
margin_right = 484.0
margin_bottom = 24.0
icon = ExtResource( 2 )
[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="gui_input" from="MarginContainer/HBoxContainer/SubGraphPath" to="." method="_on_SubGraphPath_gui_input"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/OpenButton" to="." method="_on_OpenButton_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/EditButton" to="." method="_on_EditButton_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/RemoveButton" to="." method="_on_RemoveButton_pressed"]
